gitops/apps/jw-hitster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jw-hitster
  namespace: jw-hitster
  labels:
    app: jw-hitster
spec:
  replicas: 1
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: jw-hitster
  template:
    metadata:
      labels:
        app: jw-hitster
    spec:
      containers:
        - name: jw-hitster
          image: ghcr.io/ismola/jw-hitster:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
