gitops/apps/jw-hitster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jw-hitster
  namespace: jw-hitster
spec:
  ingressClassName: traefik
  rules:
    - host: jw-hitster.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jw-hitster
                port:
                  number: 80
